[package]
name = "nonce_window"
version = "0.1.0"
authors = ["Soham Roy <sohamroy@sohamroy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"

[dev-dependencies]
rand = "0.7"

[profile.release]
lto = true
